# whisper-notes

./: .gitignore  README.md  launcher.c  pyproject.toml
.github/workflows/: ci.yml
docs/: dictation-manual-test.md  dictation-spec.md  live-transcription-spec.md  research-willow-voice.md
docs/plans/: 2026-03-04-live-transcription-design.md  2026-03-04-live-transcription.md  2026-03-04-notetaking-design.md  2026-03-04-whisper-notes.md
quill/: app.py  config.py  dictator.py  live_recorder.py  live_transcriber.py  live_window.py  note_writer.py  summarizer.py  transcriber.py
scripts/: build-app.sh  verify.py
tests/: conftest.py  test_adversary_app_live.py  test_adversary_live.py  test_app.py  test_config.py  test_dictator.py  test_e2e.py  test_e2e_dictation.py  test_integration.py  test_live_recorder.py  test_live_transcriber.py  test_live_window.py  test_note_writer.py  test_recorder.py  test_summarizer.py  test_transcriber.py
whisper_notes/: app.py  config.py  live_transcriber.py  live_window.py  note_writer.py  recorder.py  summarizer.py  transcriber.py
