[project]
name = "whisper-notes"
version = "0.1.0"
description = "macOS menu bar voice notetaking with local Whisper + Ollama"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "sounddevice",
    "scipy",
    "numpy",
    "rumps",
    "httpx",
]

[project.scripts]
whisper-notes = "whisper_notes.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
