[project]
name = "quill"
version = "0.1.0"
description = "macOS menu bar voice notetaking with local Whisper + Ollama"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "sounddevice",
    "scipy",
    "numpy",
    "rumps",
    "httpx",
    "faster-whisper",
    "pynput>=1.8.1",
]

[project.scripts]
quill = "quill.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "respx>=0.22.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
